--- a/SizceHaber/Views/Home/HomePage.cshtml
+++ b/SizceHaber/Views/Home/HomePage.cshtml
@@ -731,7 +731,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="modal-body">
                     <div class="login px-4 mx-auto mw-100">
                         <h5 class="text-center mb-4">Kayıt Ol</h5>
-                        @using (Html.BeginForm("Index", "WriterRegister", FormMethod.Post))
+                        @using (Html.BeginForm("Index", "Register", FormMethod.Post))
                         {
                             <form action="#" method="post">
                                 <div class="form-group">
