--- a/SizceHaber/Views/Login/Index.cshtml
+++ b/SizceHaber/Views/Login/Index.cshtml
@@ -86,7 +86,7 @@
                             </div>
                             <div class="text-center p-t-46 p-b-20">
                                 <span class="txt2">
-                                    <a href="/WriterRegister/Index" style="color: darkorange">Hala bir hesabın yok mu?</a>
+                                    <a href="/Register/Index" style="color: darkorange">Hala bir hesabın yok mu?</a>
                                 </span>
                             </div>
 
@@ -95,6 +95,8 @@
                         {
                             <script>swal("", "Hatalı Kullanıcı Adı veya Şifre Girdiniz", "error");</script>
                         }
+
+
                         @*<p class="w-100 text-center">&mdash; Diğer Giriş Seçenekleri &mdash;</p>
                             <div class="social d-flex text-center">
                                 <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
