--- a/SizceHaber/Views/Register/Register.cshtml
+++ b/SizceHaber/Views/Register/Register.cshtml
@@ -36,7 +36,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
                         <h3 class="mb-4 text-center">Hesabın yok mu?</h3>
-                        @using (Html.BeginForm("Index", "WriterRegister", FormMethod.Post))
+                        @using (Html.BeginForm("Index", "Register", FormMethod.Post))
                         {
                             <div class="form-group">
                                 <input type="text" name="WriterName" class="form-control" placeholder="Ad" required>
