--- a/SizceHaber/Views/Shared/_AdminLayout.cshtml
+++ b/SizceHaber/Views/Shared/_AdminLayout.cshtml
@@ -99,7 +99,7 @@ to get the desired effect
     with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <i class="nav-icon fa fa-newspaper"></i>
                                 <p>
                                     Tüm Haberler
                                     <i class="right fas fa-angle-right"></i>
@@ -109,7 +109,7 @@ to get the desired effect
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="/Heading/Index" class="nav-link">
-                                        <i class="nav-icon fas fa-th"></i>
+                                        <i class="nav-icon 	fas fa-heading"></i>
                                         <p>
                                             Başlıklar
                                         </p>
@@ -117,7 +117,7 @@ to get the desired effect
                                 </li>
                                 <li class="nav-item">
                                     <a href="/Content/GetAllContent" class="nav-link">
-                                        <i class="nav-icon fas fa-calendar-alt"></i>
+                                        <i class="nav-icon fa fa-quote-left"></i>
                                         <p>
                                             İçerikler
                                         </p>
@@ -128,7 +128,7 @@ to get the desired effect
 
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <i class="nav-icon fas fa-edit"></i>
                                 <p>
                                     Paylaşımlarım
                                     <i class="right fas fa-angle-right"></i>
@@ -138,7 +138,7 @@ to get the desired effect
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="/Heading/MyHeadings" class="nav-link">
-                                        <i class="nav-icon fas fa-th"></i>
+                                        <i class="nav-icon fas fa-heading"></i>
                                         <p>
                                             Haber Başlıklarım
                                         </p>
@@ -146,7 +146,7 @@ to get the desired effect
                                 </li>
                                 <li class="nav-item">
                                     <a href="/Content/MyContent" class="nav-link">
-                                        <i class="nav-icon fas fa-calendar-alt"></i>
+                                        <i class="nav-icon fa fa-quote-left"></i>
                                         <p>
                                             Haber İçeriklerim
                                         </p>
@@ -159,7 +159,7 @@ to get the desired effect
                         {
                             <li class="nav-item">
                                 <a href="/Authorization/Index" class="nav-link">
-                                    <i class="nav-icon fas fa-calendar-alt"></i>
+                                    <i class="nav-icon fas fa-user-lock"></i>
                                     <p>
                                         Yetkilendirmeler
                                     </p>
@@ -171,7 +171,7 @@ to get the desired effect
                         {
                             <li class="nav-item has-treeview">
                                 <a href="/Writer/Index" class="nav-link">
-                                    <i class="nav-icon fas fa-copy"></i>
+                                    <i class="nav-icon fas fa-users-cog"></i>
                                     <p>
                                         Üyeler
                                     </p>
@@ -186,7 +186,7 @@ to get the desired effect
 
                             <li class="nav-item has-treeview">
                                 <a href="/AdminCategory/Index" class="nav-link">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                                    <i class="nav-icon far fa-list-alt"></i>
                                     <p>
                                         Kategoriler
                                     </p>
@@ -196,7 +196,7 @@ to get the desired effect
 
                         <li class="nav-item has-treeview">
                             <a href="/Contact/Index" class="nav-link">
-                                <i class="nav-icon fas fa-edit"></i>
+                                <i class="nav-icon 	fas fa-envelope"></i>
                                 <p>
                                     İletişim & Mesajlar
                                 </p>
@@ -213,7 +213,7 @@ to get the desired effect
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <i class="nav-icon 	fas fa-exclamation-circle"></i>
                                 <p>
                                     Hata sayfaları
                                     <i class="right fas fa-angle-right"></i>
@@ -223,7 +223,7 @@ to get the desired effect
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="nav-icon fas fa-th"></i>
+                                        <i class="nav-icon fas fa-exclamation"></i>
                                         <p>
                                             403
                                         </p>
@@ -231,7 +231,7 @@ to get the desired effect
                                 </li>
                                 <li class="nav-item">
                                     <a href="/ErrorPage/Page404" class="nav-link">
-                                        <i class="nav-icon fas fa-calendar-alt"></i>
+                                        <i class="nav-icon fas fa-exclamation"></i>
                                         <p>
                                             404
                                         </p>
@@ -242,7 +242,7 @@ to get the desired effect
 
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <i class="nav-icon far fa-file-alt"></i>
                                 <p>
                                     Raporlar
                                     <i class="right fas fa-angle-right"></i>
@@ -253,7 +253,7 @@ to get the desired effect
 
                                 <li class="nav-item has-treeview">
                                     <a href="/Heading/HeadingReport" class="nav-link">
-                                        <i class="nav-icon fas fa-bars"></i>
+                                        <i class="nav-icon fas fa-heading"></i>
                                         <p>
                                             Başlık
                                         </p>
@@ -261,7 +261,7 @@ to get the desired effect
                                 </li>
                                 <li class="nav-item has-treeview">
                                     <a href="/Content/ContentReport" class="nav-link">
-                                        <i class="nav-icon fas fa-bars"></i>
+                                        <i class="nav-icon fa fa-quote-left"></i>
                                         <p>
                                             İçerik
                                         </p>
@@ -269,7 +269,7 @@ to get the desired effect
                                 </li>
                                 <li class="nav-item has-treeview">
                                     <a href="/Writer/WriterReport" class="nav-link">
-                                        <i class="nav-icon fas fa-bars"></i>
+                                        <i class="nav-icon fas fa-users"></i>
                                         <p>
                                             Üye
                                         </p>
@@ -279,7 +279,7 @@ to get the desired effect
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="/Login/LogOut" class="nav-link">
-                                <i class="nav-icon far fa-plus-square"></i>
+                                <i class="nav-icon fas fa-sign-out-alt"></i>
                                 <p>
                                     Çıkış Yap
                                 </p>
