--- a/SizceHaber/Views/WriterPanelContent/ContentByHeading.cshtml
+++ b/SizceHaber/Views/WriterPanelContent/ContentByHeading.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "ContentByHeading";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
-@{ int id = 1;}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -53,7 +53,6 @@
                                         </div>
                                     </div>
                                 }
-                                id = @item.HeadingID;
 
 
 
@@ -68,7 +67,7 @@
 
                                                 <input type="text" name="ContentValue" class="form-control" placeholder="Bence..." />
                                                 <br />
-                                                <input type="hidden" name="HeadingID" class="form-control" value="@id" />
+                                                <input type="hidden" name="HeadingID" class="form-control" value="@ViewBag.headingID" />
 
                                                 <button class="btn btn-dark">Gönder</button>
                                             </div>
